<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rdvanethem.myportfolio.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="27dp"
        android:text="My Nanodegree Apps!"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#060d3e" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPopularMovies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/my_button_bg"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:text="@string/btn_popular_movies"
            android:textColor="#060d3e" />

        <Button
            android:id="@+id/btnStockHawk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/my_button_bg"
            android:paddingLeft="59dp"
            android:paddingRight="59dp"
            android:text="@string/btn_stock_hawk"
            android:textColor="#060d3e" />

        <Button
            android:id="@+id/btnBuildItBigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/my_button_bg"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/btn_build_it_bigger"
            android:textColor="#060d3e" />

        <Button
            android:id="@+id/btnMakeYourAppMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/my_button_bg"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/btn_make_your_app_material"
            android:textColor="#060d3e" />

        <Button
            android:id="@+id/btnGoUbi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/my_button_bg"
            android:paddingLeft="52dp"
            android:paddingRight="52dp"
            android:text="@string/btn_go_ubiquitous"
            android:textColor="#060d3e" />

        <Button
            android:id="@+id/btnCapstone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/my_button_bg"
            android:paddingLeft="67dp"
            android:paddingRight="67dp"
            android:text="@string/btn_capstone"
            android:textColor="#060d3e" />
    </LinearLayout>

</RelativeLayout>
